<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/dialogTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialogTitle"
        app:srcCompat="@drawable/ic_delete_icon"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/dialogTitle"
        style="@style/SendKinActionBarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_padding"
        android:layout_marginLeft="@dimen/alert_padding"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/alert_padding"
        android:layout_marginRight="@dimen/alert_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/edit_address" />

    <TextView
        android:id="@+id/contactNameTitle"
        style="@style/SendKinTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/address_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />


    <TextView
        android:id="@+id/addressTitle"
        style="@style/SendKinTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/public_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />


    <TextView
        android:id="@+id/paste"
        style="@style/SendKinTitle.Purple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/paste"
        app:layout_constraintBottom_toBottomOf="@+id/addressTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addressTitle" />

    <TextView
        android:id="@+id/saveBtn"
        style="@style/SendKinTextBtn.Purple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_padding"
        android:layout_marginLeft="@dimen/alert_padding"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="@dimen/alert_padding"
        android:layout_marginRight="@dimen/alert_padding"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delim" />

    <TextView
        android:id="@+id/cancelSave"
        style="@style/SendKinTextBtn.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_padding"
        android:layout_marginLeft="@dimen/alert_padding"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/alert_padding"
        android:layout_marginRight="@dimen/alert_padding"
        android:layout_marginBottom="@dimen/alert_padding"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn" />

    <TextView
        android:id="@+id/addressInvalidError"
        style="@style/SendKinError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/the_address_is_invalid"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
         />

    <View
        android:id="@+id/testHeight"
        android:layout_width="20dp"
        android:layout_height="415dp"
        android:background="#ff33"
        android:visibility="gone" />

    <View
        android:id="@+id/delim"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/alert_padding"
        android:layout_marginLeft="@dimen/alert_padding"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/alert_padding"
        android:layout_marginRight="@dimen/alert_padding"
        android:background="@color/sendkin_delimiter_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInvalidError" />

    <android.support.constraint.Group
        android:id="@+id/nameAddressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="paste,addressTitle,address,contactName,delim" />

    <org.kin.sendkin.core.view.SendKinEditText
        android:id="@+id/contactName"
        style="@style/SendKinEditText.Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_padding"
        android:layout_marginLeft="@dimen/alert_padding"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/alert_padding"
        android:layout_marginRight="@dimen/alert_padding"
        android:hint="@string/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNameTitle" />

    <org.kin.sendkin.core.view.SendKinEditText
        android:id="@+id/address"
        style="@style/SendKinEditText.PublicAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_padding"
        android:layout_marginLeft="@dimen/alert_padding"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/alert_padding"
        android:layout_marginRight="@dimen/alert_padding"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTitle" />


</android.support.constraint.ConstraintLayout>