<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        style="@style/SendKinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="40dp"
        android:text="@string/recipient_public_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paste"
        style="@style/SendKinTitle.Purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:text="@android:string/paste"
        android:textColor="@color/sendkin_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.kin.sendkin.core.view.SendKinEditText
        android:id="@+id/recipientAddress"
        style="@style/SendKinEditText.PublicAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/next"
        style="@style/SendKinTextBtn.Purple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:enabled="true"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientAddress" />

    <TextView
        android:id="@+id/errorInfo"
        style="@style/SendKinError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="24dp"
        android:visibility="gone"
        android:text="@string/the_address_is_invalid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />

    <TextView
        android:id="@+id/showAddress"
        style="@style/SendKinTitle.Purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginTop="48dp"
        android:text="@string/show_my_public_address"
        android:textColor="@color/sendkin_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorInfo" />

    <ImageView
        android:id="@+id/publicAddressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="@+id/showAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/showAddress"
        app:srcCompat="@drawable/ic_information" />

    <View
        android:id="@+id/addressBookHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="#f7f7f7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showAddress" />

    <TextView
        android:id="@+id/addressBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginLeft="@dimen/padding_normal"
        android:fontFamily="@font/sailec_medium"
        android:text="@string/choose_an_address"
        android:textColor="@color/sendkin_grey"
        android:textSize="@dimen/sendkin_text_small_size"
        app:layout_constraintBottom_toBottomOf="@+id/addressBookHeader"
        app:layout_constraintStart_toStartOf="@+id/addressBookHeader"
        app:layout_constraintTop_toTopOf="@+id/addressBookHeader" />

</android.support.constraint.ConstraintLayout>